<resources>
    <string name="app_name">scope102</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="one">Explicit broadcast</string>
    <string name="two">Java-code registered implicit broadcast</string>
    <string name="three">Call phone</string>
    <string name="four">Send SMS</string>
    <string name="five">Open browser</string>
    <string name="six">Send email</string>
    <string name="seven">Get contact</string>
    <string name="eight">Gallery</string>
    <string name="nine">Camera</string>
    <string name="ten">Camera + email attachment</string>
    <string name="hello_petro_chose_your_broadcast_program">Hello, Petro! Chose your broadcast program!</string>

    <string name="broadcast_permission">com.petro.scope102.MyPermission</string>
    <string name="ok">ok</string>
    <string name="dialog_sms_title">Title</string>
    <string name="dialog_enter_number">Enter number</string>
    <string name="dialog_sms_send">Send</string>
</resources>