<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:background="@color/dialogs_primary_color">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:layout_marginTop="7dp"
            android:gravity="center_horizontal"
            android:text="@string/dialog_sms_title"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@color/dialogs_text_color_light"
            android:textStyle="bold" />
    </FrameLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/dialog_sms_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/dialog_enter_number"
            android:inputType="phone" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/dialog_sms_send_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/dialog_blue_button"
        android:text="@string/dialog_sms_send"
        android:layout_marginTop="10dp"/>
</LinearLayout>